# libnativedraw

./: .gitignore  CMakeLists.txt  README.md
src/: gif.cpp  jpeg.cpp  nativedraw.cpp  nativedraw.h  nativedraw_cairo.cpp  nativedraw_direct2d.cpp  nativedraw_macos.mm  nativedraw_private.h  nativedraw_wasm.cpp  png.cpp
tests/: CMakeLists.txt  images.cpp  images.h  main.cpp  x11.cpp  x11.h
timings/: CMakeLists.txt  cairo-x11.cpp  direct2d.cpp  macos.mm  timings.cpp  timings.h  wasm.cpp
