set(TIMING_HEADERS timings.h)
set(TIMING_SOURCES timings.cpp)
if (APPLE)
    list(APPEND TIMING_SOURCES macos.mm)
elsif (WIN32)
    list(APPEND TIMING_SOURCES direct2d.cpp)
else()
    list(APPEND TIMING_SOURCES cairo-x11.cpp)
endif()
add_executable(timing ${TIMING_HEADERS} ${TIMING_SOURCES})
target_link_libraries(timing libnativedraw)
